--- a/mediaVue/mediaVue.html
+++ b/mediaVue/mediaVue.html
@@ -5,6 +5,48 @@
   <script src="https://unpkg.com/vue@2.6.14"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+
+    h2 {
+      margin-bottom: 10px;
+    }
+
+    label {
+      display: inline-block;
+      width: 100px;
+    }
+
+    input[type="number"],
+    input[type="text"],
+    input[type="date"] {
+      padding: 5px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      padding: 5px 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 5px;
+    }
+
+    .delete-button {
+      margin-left: 10px;
+      background-color: #f44336;
+    }
+
     #radarChart {
       width: 400px;
       height: 400px;
@@ -28,20 +70,26 @@
     <label for="goals">Objetivos:</label>
     <input type="number" step="0.01" v-model="goals"><br>
 
+    <label for="comment">Comentário:</label>
+    <input type="text" v-model="comment"><br>
+
+    <label for="date">Data:</label>
+    <input type="date" v-model="date"><br>
+
     <button @click="calculateAverage">Calcular</button>
+
+    <button @click="clearInput">Limpar Campos</button>
 
     <div v-if="classification !== ''">
       <div>Classificação: {{ classification }}</div>
     </div>
 
-    <!-- <canvas id="radarChart"></canvas> -->
-
     <h3>Histórico de Notas</h3>
 
     <ul>
       <li v-for="(entry, index) in history" :key="index">
-        {{ entry.date }}: Média {{ entry.average }} - Classificação: {{ entry.classification }} - Int: {{ entry.intelligence }} - For: {{ entry.strength}} - Char: {{ entry.charm }} - Objtv: {{ entry.goals}}
-        <button @click="deleteEntry(index)">Excluir</button>
+        Data: {{ entry.date }} - Média {{ entry.average }} - Classificação: {{ entry.classification }} - Int: {{ entry.intelligence }} - For: {{ entry.strength}} - Char: {{ entry.charm }} - Objtv: {{ entry.goals}} - Comentário: {{ entry.comment }}
+        <button class="delete-button" @click="deleteEntry(index)">Excluir</button>
       </li>
     </ul>
 
@@ -58,12 +106,15 @@
         strength: '',
         charm: '',
         goals: '',
+        comment: '',
+        date: '',
         classification: '',
         history: [],
         radarChart: null
       },
       mounted() {
         this.retrieveData();
+        this.updateRadarChart();
       },
       methods: {
         retrieveData() {
@@ -114,15 +165,15 @@
             this.classification = 'Perfeição';
           }
 
-          const currentDate = new Date().toLocaleDateString();
           const entry = {
-            date: currentDate,
+            date: this.date,
             average: average.toFixed(2),
             classification: this.classification,
             intelligence: this.intelligence,
             strength: this.strength,
             charm: this.charm,
-            goals: this.goals
+            goals: this.goals,
+            comment: this.comment
           };
           this.history.push(entry);
           localStorage.setItem('history', JSON.stringify(this.history));
@@ -140,6 +191,14 @@
           localStorage.removeItem('history');
 
           this.updateRadarChart();
+        },
+        clearInput() {
+          this.intelligence = '';
+          this.strength = '';
+          this.charm = '';
+          this.goals = '';
+          this.comment = '';
+          this.date = '';
         },
         updateRadarChart() {
           if (this.radarChart) {
